Fix navbar spacing.

--- a/main.css
+++ b/main.css
@@ -408,7 +408,7 @@ ul {
 
 
 
-@media screen and (min-width: 1000px) {
+@media screen and (min-width: 1200px) {
 	.nav-toggle-label {
 		display: none;
 	}
